tests/ui/transmute-ref-src-not-nocell.nightly.stderr
error[E0277]: the trait bound `Src: Immutable` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  unsatisfied trait bound
   |                                  required by a bound introduced by this call
   |
help: the trait `Immutable` is not implemented for `Src`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-src-not-nocell.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 128 others
note: required by a bound in `AssertSrcIsImmutable`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full name for the type has been written to '/long-type-HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: Immutable` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Immutable` is not implemented for `Src`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-src-not-nocell.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `Src`
   = help: the following other types implement trait `Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 128 others
note: required by a bound in `AssertSrcIsImmutable`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-src-not-nocell.rs:21:34
   |
21 | const SRC_NOT_IMMUTABLE: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full name for the type has been written to '/long-type-HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
